--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: api_manger
 description: "A flutter package to API handling like a super boss 😎."
-version: 0.0.6
+version: 0.0.7
 homepage: https://github.com/AbdOoSaed/api_manger
 
 environment:
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ">=4.0.0 <5.0.0"
-
+  connectivity_plus: ">=1.0.0 <2.0.0"
 dev_dependencies:
   flutter_test:
     sdk: flutter
