--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: api_manger
 description: "A flutter package to API handling like a super boss 😎."
-version: 0.0.9
+version: 0.0.10
 homepage: https://github.com/AbdOoSaed/api_manger
 
 environment:
@@ -15,5 +15,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: 1.16.8
+  mockito: 5.0.14
+  build_runner: 2.1.1
+  flutter_lints: ^1.0.4
 
 flutter:
